[gd_scene load_steps=9 format=3 uid="uid://d3eil6wj7mchc"]

[ext_resource type="Theme" uid="uid://blu2ho5t3snyv" path="res://MainTheme.tres" id="1_dw87v"]
[ext_resource type="Script" path="res://Scenes/MainUI/GuildButton.gd" id="2_36wqx"]
[ext_resource type="Script" path="res://Scenes/MainUI/SleepButton.gd" id="2_ntqcd"]
[ext_resource type="Texture2D" uid="uid://bfemm3wbmw5gx" path="res://Sprites/UI/Movement/GuildButton.png" id="2_yvumh"]
[ext_resource type="Script" path="res://Scenes/MainUI/ShopButton.gd" id="3_5r4tf"]
[ext_resource type="PackedScene" uid="uid://cj7kjfem82ngp" path="res://Scenes/MainUI/SleepPopup.tscn" id="3_43dab"]
[ext_resource type="Texture2D" uid="uid://quhdo85bqpne" path="res://Sprites/UI/Movement/Shop.png" id="4_37ceq"]
[ext_resource type="Texture2D" uid="uid://dlyay58xkrluy" path="res://Sprites/UI/Movement/SleepButton.png" id="6_ushuy"]

[node name="CenterContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_dw87v")

[node name="MainButtonsLine" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GuildButton" type="Button" parent="MarginContainer/MainButtonsLine"]
layout_mode = 2
icon = ExtResource("2_yvumh")
flat = true
script = ExtResource("2_36wqx")

[node name="ShopButton" type="Button" parent="MarginContainer/MainButtonsLine"]
layout_mode = 2
icon = ExtResource("4_37ceq")
flat = true
script = ExtResource("3_5r4tf")

[node name="SleepButton" type="Button" parent="MarginContainer/MainButtonsLine"]
layout_mode = 2
icon = ExtResource("6_ushuy")
flat = true
script = ExtResource("2_ntqcd")

[node name="ConfirmationDialog" parent="MarginContainer/MainButtonsLine/SleepButton" instance=ExtResource("3_43dab")]
visible = false

[connection signal="pressed" from="MarginContainer/MainButtonsLine/GuildButton" to="MarginContainer/MainButtonsLine/GuildButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/MainButtonsLine/ShopButton" to="MarginContainer/MainButtonsLine/ShopButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/MainButtonsLine/SleepButton" to="MarginContainer/MainButtonsLine/SleepButton" method="_on_pressed"]
